tests/ui/issue-3145.stderr
error: expected token: `,`
  --> $DIR/issue-3145.rs:12:19
   |
12 |     println!("{}" a); //~ERROR expected token: `,`
   |                   ^

error: aborting due to previous error

